[package]
name = "project1"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "solver"
path = "./src/lib.rs"

[[bench]]
name = "bench"
harness = false
